#740: correct TI